# vi-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  build.rs  flake.nix
.github/workflows/: main.yml
benches/: all_syllables_benchmark.rs  clean_char_benchmark.rs  incremental_benchmark.rs  transform_benchmark.rs
examples/: custom_definition.rs  engine.rs  incremental.rs  long.rs  old_style.rs  repl.rs  simple  simple.c  simple.rs  telex.rs  vni.rs
headers/: vi.h
src/: editing.rs  engine.rs  key.rs  lib.rs  main.rs  maps.rs  methods.rs  parsing.rs  processor.rs  syllable.rs  telex.rs  util.rs  validation.rs  vni.rs  word.rs
src/engine/: character_map.rs  engine.rs  key.rs  key_codes.rs  maps.rs  mod.rs  processor.rs  util.rs  vni.rs
src/keyboard/: linux.rs  mod.rs
src/keyboard/linux/: evdev_uinput.rs  evdev_x11.rs  mod.rs
testdata/: all_syllables.txt
testdata/input/: all_telex.txt  all_vni.txt  bogo_engine_telex.txt  non_vietnamese_telex.txt  non_vietnamese_vni.txt  simple_telex.txt  simple_vni.txt
testdata/output/: telex__all_vietnamese_telex.snap  telex__bogo_engine_telex.snap  telex__non_vietnamese_telex.snap  telex__non_vietnamese_telex.snap.new  telex__simple_telex.snap  telex__simple_telex.snap.new  vni__all_vietnamese_vni.snap  vni__non_vietnamese_vni.snap  vni__simple_vni.snap
tests/: incremental.rs  shared.rs  telex.rs  vni.rs
