[package]
name = "vi"
version = "0.3.8"
authors = ["Nguyễn Việt Hưng <viethungax@gmail.com>"]
edition = "2018"
description = "An input method library for vietnamese IME"

homepage = "https://github.com/ZeroX-DG/vi-rs/"
repository = "https://github.com/ZeroX-DG/vi-rs.git"
license-file = "LICENSE"

keywords = ["vietnamese", "ime", "vi"]
categories = ["text-processing"]

[dependencies]
phf = { version = "0.11", features = ["macros"] }
nom = "7.1.3"

[dev-dependencies]
insta = "1.26"
cargo-insta = "1.26.0"
serde = "1.0"
criterion = "0.3"

[[bench]]
name = "transform_benchmark"
harness = false
