[package]
name = "vi"
version = "0.7.0"
authors = ["Nguyễn Việt Hưng <viethungax@gmail.com>"]
edition = "2018"
description = "An input method library for vietnamese IME"

homepage = "https://github.com/ZeroX-DG/vi-rs/"
repository = "https://github.com/ZeroX-DG/vi-rs.git"
license-file = "LICENSE"

keywords = ["vietnamese", "ime", "vi"]
categories = ["text-processing"]

[dependencies]
phf = { version = "0.11", features = ["macros"] }
nom = "7.1.3"
log = "0.4"

[dev-dependencies]
insta = { version ="1.26", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
criterion = "0.3"
rustyline = "14"

[[bench]]
name = "transform_benchmark"
harness = false
