[package]
name = "vi"
version = "0.8.0"
authors = ["Nguyễn Việt Hưng <viethungax@gmail.com>"]
edition = "2021"
description = "An input method library for vietnamese IME"

homepage = "https://github.com/ZeroX-DG/vi-rs/"
repository = "https://github.com/ZeroX-DG/vi-rs.git"
license-file = "LICENSE"

keywords = ["vietnamese", "ime", "vi"]
categories = ["text-processing"]

[dependencies]
phf = { version = "0.11", features = ["macros"] }
nom = "8.0"
log = "0.4"
smallvec = "1.13"

[dev-dependencies]
insta = { version = "1.43", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
criterion = "0.6"
rustyline = "16"

[[bench]]
name = "transform_benchmark"
harness = false

[[bin]]
name = "vietnamese_generator"
path = "src/bin/vietnamese_generator.rs"

[[bin]]
name = "vn2ime"
path = "src/bin/vn2ime.rs"

[[bench]]
name = "incremental_benchmark"
harness = false

[[bench]]
name = "clean_char_benchmark"
harness = false

[[bench]]
name = "all_syllables_benchmark"
harness = false
